--- a/config.env
+++ b/config.env
@@ -1,5 +1,6 @@
 NODE_DEV=development
-PORT=5000
-USERNAME=mike
-PASSWORD=1234
-TEST=pizza
+PORT=4000
+
+DATABASE_PWD=mike0938265860
+
+DATABASE=mongodb+srv://mike0322:<password>@cluster0.vy12l.mongodb.net/matours?retryWrites=true&w=majority
