--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.13",
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
