--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.2"
   },
   "engines": {
     "node": ">=10.0.0"
