--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.2"
+    "slugify": "^1.6.2",
+    "validator": "^13.7.0"
   },
   "engines": {
     "node": ">=10.0.0"
