--- a/config.env
+++ b/config.env
@@ -1,6 +1,7 @@
-NODE_DEV=development
+NODE_ENV=development
 PORT=5000
 
 DATABASE_PWD=BB0vthciH44IDkXN
+
 
 DATABASE=mongodb+srv://mike0322:<password>@cluster0.vy12l.mongodb.net/matours?retryWrites=true&w=majority
