--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "prod": "NODE_DEV=production nodemon server.js",
+    "start": "NODE_ENV=development nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
     "import-data": "node dev-data/data/import-dev-data.js --import",
-    "delete-data": "node dev-data/data/import-dev-data.js --delete"
+    "delete-data": "node dev-data/data/import-dev-data.js --delete",
+    "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
+    "ndb": "^1.1.5",
     "slugify": "^1.6.2",
     "validator": "^13.7.0"
   },
